--- a/Courses/CMakeLists.txt
+++ b/Courses/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -DDEBUG -lbsd")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -lbsd")
 
 add_subdirectory(Algorithms1Coursera)
+add_subdirectory(cryptopals)
