--- a/LiGi/Makefile
+++ b/LiGi/Makefile
@@ -1,18 +1,21 @@
 OBJS = \
-	main.o 
+	Assertions.o \
+	Test.o \
+	testings.o
 APP = a.out
 
 
-CXX = g++
+CXX = clang++
 CXX_STANDARD = -std=c++17 -Wall -g
-CXXFLAGS = -DDEBUG --std=c++2a -Wall -Werror -Wextra -Wpedantic -Wno-unused-parameter -Wno-unused-function -Wno-unused-label -Wpointer-arith -Wformat -Wreturn-type -Wsign-compare -Wmultichar -Wformat-nonliteral -Winit-self -Wuninitialized -Wno-deprecated -Wformat-security -pipe -g
-LD = g++
+ADD_FLAGS =
+CXXFLAGS = -DFRANKENSTEIN -DDEBUG --std=c++2a -Wall -Werror -Wextra -Wpedantic -Wno-unused-parameter -Wno-unused-function -Wno-unused-label -Wpointer-arith -Wformat -Wreturn-type -Wsign-compare -Wmultichar -Wformat-nonliteral -Winit-self -Wuninitialized -Wno-deprecated -Wformat-security -pipe -g $(ADD_FLAGS)
+LD = $(CXX)
 LDFLAGS = -lm
 
 all: $(APP)
 
 run:
-	@make &> /dev/null
+	@make
 	@./$(APP)
 
 $(APP): $(OBJS)
