--- a/LiGi/Makefile
+++ b/LiGi/Makefile
@@ -1,20 +1,23 @@
 OBJS = \
 	Assertions.o \
-	stack.o \
 	Test.o \
 	testings.o
 APP = a.out
 
 
-CXX = clang++
+CXX = g++
 CXX_STANDARD = -std=c++17 -Wall -g
 ADD_FLAGS =
-CXXFLAGS = -DFRANKENSTEIN -DDEBUG --std=c++2a -Wall -Werror -Wextra -Wpedantic -Wno-unused-parameter -Wno-unused-function -Wno-unused-label -Wpointer-arith -Wformat -Wreturn-type -Wsign-compare -Wmultichar -Wformat-nonliteral -Winit-self -Wuninitialized -Wno-deprecated -Wformat-security -pipe -g $(ADD_FLAGS)
+DBG_FLAGS = -DTEST -DFRANKENSTEIN -DDEBUG
+CXXFLAGS = --std=c++2a -Wall -Werror -Wextra -Wpedantic -Wno-unused-parameter -Wno-unused-function -Wno-unused-label -Wpointer-arith -Wformat -Wreturn-type -Wsign-compare -Wmultichar -Wformat-nonliteral -Winit-self -Wuninitialized -Wno-deprecated -Wformat-security -pipe -g $(ADD_FLAGS)
 LD = $(CXX)
 LDFLAGS = -lm
 
 all: $(APP)
 
+rundbg:
+	make ADD_FLAGS="$(DBG_FLAGS)"
+	@./$(APP)
 run:
 	@make
 	@./$(APP)
