Include CONFIRM_SUCCESS-Flag to standard Debug build

--- a/LiGi/Makefile
+++ b/LiGi/Makefile
@@ -8,7 +8,7 @@ APP = a.out
 CXX = g++
 CXX_STANDARD = -std=c++17 -Wall -g
 ADD_FLAGS =
-DBG_FLAGS = -DTEST -DFRANKENSTEIN -DDEBUG
+DBG_FLAGS = -DTEST -DFRANKENSTEIN -DDEBUG -DCONFIRM_SUCCESS
 CXXFLAGS = --std=c++2a -Wall -Werror -Wextra -Wpedantic -Wno-unused-parameter -Wno-unused-function -Wno-unused-label -Wpointer-arith -Wformat -Wreturn-type -Wsign-compare -Wmultichar -Wformat-nonliteral -Winit-self -Wuninitialized -Wno-deprecated -Wformat-security -pipe -g $(ADD_FLAGS)
 LD = $(CXX)
 LDFLAGS = -lm
