Beginner-Projects: CMake should build with bsd linking

--- a/joergegonzalez_beginner_projects/CMakeLists.txt
+++ b/joergegonzalez_beginner_projects/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.14)
-project(joergegonzalez_beginner_projects)
+project(joergegonzalez_beginner_projects VERSION 0.01
+        DESCRIPTION "Beginner Projects"
+        LANGUAGES   CXX)
 
-set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -DDEBUG -lbsd")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -lbsd")
+set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -DDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
+add_compile_options(-lbsd)
+add_link_options(-lbsd)
 add_executable(base_jumper base_jumper.cpp)
 add_executable(BaseDeriveDynamic BaseDeriveDynamic.cpp)
 add_executable(change_calculator change_calculator.cpp)
@@ -20,8 +24,5 @@ add_executable(menu_calc menu_calc.cpp)
 add_executable(palindrome palindrome.cpp)
 add_executable(progressbar progressbar.cpp)
 add_executable(pythagorean_triples_checker pythagorean_triples_checker.cpp)
-add_executable(rock_paper_scissors rock_paper_scissors.cpp)
-
-
-
-add_executable(simpleparser net/simpleparser.cpp)
+#add_executable(rock_paper_scissors rock_paper_scissors.cpp)
+add_executable(factors_of_my_number factors_of_my_number.cpp)
