--- a/joergegonzalez_beginner_projects/CMakeLists.txt
+++ b/joergegonzalez_beginner_projects/CMakeLists.txt
@@ -24,5 +24,5 @@ add_executable(menu_calc menu_calc.cpp)
 add_executable(palindrome palindrome.cpp)
 add_executable(progressbar progressbar.cpp)
 add_executable(pythagorean_triples_checker pythagorean_triples_checker.cpp)
-#add_executable(rock_paper_scissors rock_paper_scissors.cpp)
+add_executable(rock_paper_scissors rock_paper_scissors.cpp)
 add_executable(factors_of_my_number factors_of_my_number.cpp)
