Build Diagnosis! Add CMakeLists!

--- a/LiGi/CMakeLists.txt
+++ b/LiGi/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(LIGI_TESTS VERSION 0.0.1)
+project(LIGI VERSION 0.0.1)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
@@ -8,12 +8,7 @@ set(CMAKE_BUILD_TYPE Debug)
 set("CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} --std=c++2a -g -pedantic-errors -Wuseless-cast -Wall -Wpedantic -Wextra -Wsuggest-final-methods -Wsuggest-final-types -Wsuggest-override -Wno-redundant-move -Wno-pessimizing-move -Wnon-virtual-dtor -Wconversion")
 
 
-get_filename_component(PARENT_DIR ../ ABSOLUTE)
-include_directories(${PARENT_DIR})
-add_library(diagnosis_thingy SHARED
-	../diagnosis.cpp ../diagnosis.h)
+set(ASSERTIONS_LIB ./Assertions.h ./Assertions.cpp)
 
-add_executable(xdg_test xdg_basedirs.cpp ../Test.cpp)
+add_library(assertions_thingy SHARED ${ASSERTIONS_LIB})
 
-add_executable(pathtools_test PathTools.cpp ../Test.cpp)
-target_link_libraries(pathtools_test diagnosis_thingy)
