Warc: CMake and things! Unbrick!

--- a/warc-parse/CMakeLists.txt
+++ b/warc-parse/CMakeLists.txt
@@ -23,9 +23,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++2a -g -pedantic-errors -Wuseles
 #endif()
 
 # Set include directory
-#get_filename_component(PARENT_DIR ../../.. ABSOLUTE)
-#include_directories(${PARENT_DIR}/)
-add_executable(ligiwarc parser.cpp)
-target_compile_options(ligiwarc PUBLIC -Wpedantic -g -pedantic-errors -Wall -Weffc++)
+get_filename_component(PARENT_DIR ../../.. ABSOLUTE)
+include_directories(${PARENT_DIR}/)
 #target_link_libraries(Pomocurses ${CURSES_LIBRARIES} Threads::Threads)
 #file(RENAME build/compile_commands.json compile_commands.json)
+
+add_executable(ligiwarc parser.cpp)
+
+target_compile_options(ligiwarc PUBLIC -Wpedantic -g -pedantic-errors -Wall -Weffc++)
