--- a/LiGi/apps/BasicallyHTTP/CMakeLists.txt
+++ b/LiGi/apps/BasicallyHTTP/CMakeLists.txt
@@ -11,11 +11,11 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++2a -g -pedantic-errors -Wuseless-cast -Wall -Wpedantic -Wextra -Wsuggest-final-methods -Wsuggest-final-types -Wsuggest-override -Wno-redundant-move -Wno-pessimizing-move -Wnon-virtual-dtor -Wconversion")
 
 # @TODO: NcursesW?
-SET(CURSES_USE_NCURSESW TRUE)
+#SET(CURSES_USE_NCURSESW TRUE)
 
 # Include NCurses
-find_package(Curses REQUIRED)
-include_directories(${CURSES_INCLUDE_DIR})
+#find_package(Curses REQUIRED)
+#include_directories(${CURSES_INCLUDE_DIR})
 
 # Include threads(but prefer PTHREAD, ty)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -25,7 +25,8 @@ if(NOT CMAKE_USE_PTHREADS_INIT)
 endif()
 
 # Set include directory
-get_filename_component(PARENT_DIR ../../../.. ABSOLUTE)
+get_filename_component(PARENT_DIR ../../../ ABSOLUTE)
 include_directories(${PARENT_DIR}/)
+message("Trace for PARENT_DIR ${PARENT_DIR}")
 add_executable(BasicallyHTTP main.cpp)
 
