--- a/LiGi/apps/lipsum_gen/src/CMakeLists.txt
+++ b/LiGi/apps/lipsum_gen/src/CMakeLists.txt
@@ -1,4 +1,3 @@
 get_filename_component(PARENT_DIR ../../../../ ABSOLUTE)
 include_directories(${PARENT_DIR}/)
-add_executable(lipsum_gen main.cpp lipsum.cpp lipsum.hpp)
-
+add_executable(lipsum_gen main.cpp lipsum.hpp lipsum.cpp)
