MD5/Hashing-Thingy: Rename & description

--- a/snips/conan_thingies/md5-calc-tut/CMakeLists.txt
+++ b/snips/conan_thingies/md5-calc-tut/CMakeLists.txt
@@ -6,5 +6,5 @@ add_definitions("-std=c++20")
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(md5 source.cpp)
-target_link_libraries(md5 ${CONAN_LIBS})
+add_executable(fileHash source.cpp)
+target_link_libraries(fileHash ${CONAN_LIBS})
