fileHasher: Better structuring

--- a/snips/conan_thingies/fileHasher/CMakeLists.txt
+++ b/snips/conan_thingies/fileHasher/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
-project(POCO_MD5_Encrypt)
+project(POCO_File_Hasher)
 
 add_definitions("-std=c++20")
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(fileHash source.cpp)
+add_executable(fileHash source.cpp FileHashPrinter.hpp common.hpp)
 target_link_libraries(fileHash ${CONAN_LIBS})
