--- a/snips/conan_thingies/fileHasher/CMakeLists.txt
+++ b/snips/conan_thingies/fileHasher/CMakeLists.txt
@@ -6,5 +6,5 @@ add_definitions("-std=c++20")
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(fileHash source.cpp FileHashPrinter.hpp common.hpp)
+add_executable(fileHash source.cpp FileHashPrinter.hpp common.hpp StringFormat.hpp)
 target_link_libraries(fileHash ${CONAN_LIBS})
