fileHasher: Structural rework & const correctness on digVec

--- a/snips/conan_thingies/fileHasher/CMakeLists.txt
+++ b/snips/conan_thingies/fileHasher/CMakeLists.txt
@@ -9,6 +9,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-attributes")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Og")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Ofast -DNDEBUG")
 
-add_executable(fileHash main.cpp FileHashPrinter.hpp common.hpp StringFormat.hpp ReadIntoEngine.hpp)
+add_executable(fileHash main.cpp src/Print/Adapters/FileHashPrinter.hpp common.hpp src/Print/Format/StringFormat.hpp src/Print/FileIO/ReadIntoEngine.hpp src/DigestEncryptApp.hpp)
 #target_link_libraries(fileHash ${CONAN_LIBS})
 conan_target_link_libraries(fileHash)
