--- a/snips/conan_thingies/fileHasher/CMakeLists.txt
+++ b/snips/conan_thingies/fileHasher/CMakeLists.txt
@@ -1,6 +1,17 @@
 cmake_minimum_required(VERSION 3.16)
 project(POCO_File_Hasher)
 
+
+SET(SRCS main.cpp
+        main.cpp
+        src/common.hpp
+        src/Print/Adapters/FileHashPrinter.hpp
+        src/Print/Format/StringFormat.hpp
+        src/Print/Format/AbstractOutputFormatter.hpp
+        src/Print/FileIO/ReadIntoEngine.hpp src/DigestEncryptApp.hpp
+        )
+
+
 add_definitions("-std=c++20")
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
@@ -11,6 +22,6 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Ofast -DNDEBUG")
 
 include_directories("src")
 
-add_executable(fileHash main.cpp src/Print/Adapters/FileHashPrinter.hpp src/common.hpp src/Print/Format/StringFormat.hpp src/Print/FileIO/ReadIntoEngine.hpp src/DigestEncryptApp.hpp)
+add_executable(fileHash "${SRCS}")
 #target_link_libraries(fileHash ${CONAN_LIBS})
 conan_target_link_libraries(fileHash)
