Running the main functionality in separate funcs now
Flexibility matters, no? Gonna get to update that in the near future to
have multiple forms and types of FilesLists.
Currently i'm just using that one. Will be fun to adapt it! :)

--- a/snips/conan_thingies/JSONTree/CMakeLists.txt
+++ b/snips/conan_thingies/JSONTree/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(SRCS main.cpp
 
         src/Formatters/List/MarkdownIndexList.hpp src/Formatters/List/IndexList.hpp src/Formatters/Links/OptionalMarkdownLink.hpp)
 
-#SET(SanitizerFlags "  -fsanitize=leak -fsanitize=integer-divide-by-zero -fsanitize=unreachable -fsanitize=return  -fsanitize-address-use-after-scope -fsanitize=signed-integer-overflow -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize=pointer-overflow -fsanitize=builtin")
+SET(SanitizerFlags "  -fsanitize=leak -fsanitize=integer-divide-by-zero -fsanitize=unreachable -fsanitize=return  -fsanitize-address-use-after-scope -fsanitize=signed-integer-overflow -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize=pointer-overflow -fsanitize=builtin")
 
 
 add_definitions("-std=c++20")
