--- a/snips/conan_thingies/JSONTree/CMakeLists.txt
+++ b/snips/conan_thingies/JSONTree/CMakeLists.txt
@@ -3,14 +3,16 @@ project(JSONTree)
 
 # DEBUG: set(CMAKE_VERBOSE_MAKEFILE on)
 
-SET(SRCS main.cpp
+SET(SRCS
         src/common.hpp
         src/Formatters/Links/LinkFormat.hpp
         src/Formatters/Links/MarkdownLink.hpp
         src/Formatters/Links/DokuwikiLink.hpp
         src/Formatters/Links/HTMLLink.hpp
-
-        src/Formatters/List/MarkdownIndexList.hpp src/Formatters/List/IndexList.hpp src/Formatters/Links/OptionalMarkdownLink.hpp src/Parsers/MarkdownLinkOptional.hpp)
+        src/Formatters/List/MarkdownIndexList.hpp
+        src/Formatters/List/IndexList.hpp
+        src/Formatters/Links/OptionalMarkdownLink.hpp
+        src/Parsers/MarkdownLinkOptional.hpp src/Parsers/MarkdownLexer.hpp)
 
 SET(SanitizerFlags "  -fsanitize=leak -fsanitize=integer-divide-by-zero -fsanitize=unreachable -fsanitize=return  -fsanitize-address-use-after-scope -fsanitize=signed-integer-overflow -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize=pointer-overflow -fsanitize=builtin")
 
@@ -30,6 +32,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories("src")
 
-add_executable(jsontree "${SRCS}")
+add_executable(jsontree main.cpp "${SRCS}")
+add_executable(TestLex Tests/TestMarkdownLexer.cpp "${SRCS}")
 #target_link_libraries(fileHash ${CONAN_LIBS})
 conan_target_link_libraries(jsontree)
+conan_target_link_libraries(TestLex)
