MarkdownParser: Rename Decisionstruct and also better API to decide!
This allows a more uniform API to include decisions instead of just
dumping in the decisions manually over every for loop in the switch
statement which should be, for clear code practice, relativly
short&conscise!

--- a/snips/conan_thingies/JSONTree/CMakeLists.txt
+++ b/snips/conan_thingies/JSONTree/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(JSONTree)
 
+# set(CMAKE_GENERATOR "Ninja")
 # DEBUG: set(CMAKE_VERBOSE_MAKEFILE on)
 
 SET(SRCS
@@ -12,7 +13,8 @@ SET(SRCS
         src/Formatters/List/MarkdownIndexList.hpp
         src/Formatters/List/IndexList.hpp
         src/Formatters/Links/OptionalMarkdownLink.hpp
-        src/Parsers/MarkdownLinkOptional.hpp src/Parsers/MarkdownScanner.hpp)
+        src/Parsers/MarkdownLinkOptional.hpp
+        src/Parsers/MarkdownScanner.hpp)
 
 SET(SanitizerFlags "  -fsanitize=leak -fsanitize=integer-divide-by-zero -fsanitize=unreachable -fsanitize=return  -fsanitize-address-use-after-scope -fsanitize=signed-integer-overflow -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize=pointer-overflow -fsanitize=builtin")
 
@@ -32,8 +34,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories("src")
 
-add_executable(jsontree main.cpp "${SRCS}")
-add_executable(TestLex Tests/TestMarkdownLexer.cpp "${SRCS}")
+add_executable(jsontree main.cpp)
+add_executable(TestLex Tests/TestMarkdownLexer.cpp)
 #target_link_libraries(fileHash ${CONAN_LIBS})
+
 conan_target_link_libraries(jsontree)
 conan_target_link_libraries(TestLex)
+target_precompile_headers(jsontree PUBLIC ${SRCS})
+target_precompile_headers(TestLex REUSE_FROM jsontree)
