--- a/snips/conan_thingies/JSONTree/CMakeLists.txt
+++ b/snips/conan_thingies/JSONTree/CMakeLists.txt
@@ -3,7 +3,10 @@ project(JSONTree)
 
 # DEBUG: set(CMAKE_VERBOSE_MAKEFILE on)
 
+include_directories("src")
 SET(SRCS
+        src/Parsers/MarkdownLinkOptional.hpp
+        src/Parsers/MarkdownLinkOptional.cpp
         src/common.hpp
         src/Formatters/Links/LinkFormat.hpp
         src/Formatters/Links/MarkdownLink.hpp
@@ -12,7 +15,6 @@ SET(SRCS
         src/Formatters/List/MarkdownIndexList.hpp
         src/Formatters/List/IndexList.hpp
         src/Formatters/Links/OptionalMarkdownLink.hpp
-        src/Parsers/MarkdownLinkOptional.hpp
         src/Parsers/MarkdownScanner.hpp)
 
 SET(SanitizerFlags "  -fsanitize=leak -fsanitize=integer-divide-by-zero -fsanitize=unreachable -fsanitize=return  -fsanitize-address-use-after-scope -fsanitize=signed-integer-overflow -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize=pointer-overflow -fsanitize=builtin")
@@ -31,13 +33,12 @@ add_compile_options()
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories("src")
 
-add_executable(jsontree main.cpp)
-add_executable(TestLex Tests/TestMarkdownLexer.cpp)
+add_executable(jsontree main.cpp "${SRCS}")
+add_executable(TestLex Tests/TestMarkdownLexer.cpp "${SRCS}")
 #target_link_libraries(fileHash ${CONAN_LIBS})
+#target_precompile_headers(jsontree PUBLIC ${SRCS})
+#target_precompile_headers(TestLex REUSE_FROM jsontree)
 
 conan_target_link_libraries(jsontree)
 conan_target_link_libraries(TestLex)
-target_precompile_headers(jsontree PUBLIC ${SRCS})
-target_precompile_headers(TestLex REUSE_FROM jsontree)
