--- a/snips/conan_thingies/JSONTree/CMakeLists.txt
+++ b/snips/conan_thingies/JSONTree/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(SRCS
         src/Formatters/List/MarkdownIndexList.hpp
         src/Formatters/List/IndexList.hpp
         src/Formatters/Links/OptionalMarkdownLink.hpp
-        src/Parsers/MarkdownScanner.hpp)
+        src/Parsers/MarkdownScanner.hpp src/Parsers/StackingMarkdownLexer.cpp src/Parsers/StackingMarkdownLexer.hpp)
 
 SET(SanitizerFlags "  -fsanitize=leak -fsanitize=integer-divide-by-zero -fsanitize=unreachable -fsanitize=return  -fsanitize-address-use-after-scope -fsanitize=signed-integer-overflow -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize=pointer-overflow -fsanitize=builtin")
 
